# MCPLLM

./: .env.example  .gitignore  AGENTS_DOCUMENTATION.md  Báo cáo tiến độ.docx  DEPLOYMENT.md  README.md  WORKFLOW_DIAGRAM.md  cron_log_analyzer.py  final_cleanup.py  pyproject.toml  requirements.txt  run_all_services.py  run_backend.py  run_fullstack.py  run_mcp_server.py  system_architecture.mmd  test_genrule_workflow.py  web_attack_logs.txt  workflow_diagram.mmd
KB/Security/: Asset.md
KB/cheatsheets/: Kubernetes_Security_Cheat_Sheet.md
backend/: analyzer.py  asset_db.json  config.py  graph_builder.py  graph_visualizer.py  main.py  models.py  normalizer.py  pdf_generator_vi.py  routing.py  rule_exporter.py  summary.py  supervisor.py
backend/agents/: __init__.py  analyze_agent.py  asset_agent.py  genrule_agent.py  query_agent.py  queryrag_agent.py  recommend_agent.py  report_agent.py  supervisor_agent.py  ti_agent.py
backend/nodes/: __init__.py  agent_nodes.py  io_nodes.py  processing_nodes.py  supervisor_nodes.py
backend/services/: aggregated_statistics.py  asset_enrichment.py  asset_ip_lookup.py  asset_manager.py  cron_scheduler.py  cron_statistics.py  (+2 more)
docs/: CRON_SETUP.md
frontend/: .gitignore  README.md  index.html  package.json  vite.config.js
mcp_server/: README.md  __init__.py  log_server.py  rag_server.py  rag_server_http.py  unified_server.py
scripts/: populate_rag_data.py  setup_nginx.sh  setup_production.sh  setup_services.sh  start_all.sh  test_local_setup.py  test_mcp.sh
test/: ingest.py  rag_pipeline.ipynb  test.ipynb  test.py
(+21 files in other folders)
